# RecordGLActivity

./: settings.gradle
app/: build.gradle
app/libs/: shaderlab-release.aar
app/src/androidTest/java/com/xinlan/recordgl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xinlan/recordgl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xinlan/recordgl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shaderlab/: build.gradle
shaderlab/src/androidTest/java/com/xinlan/shaderlab/: ExampleInstrumentedTest.java
shaderlab/src/main/: AndroidManifest.xml
shaderlab/src/main/assets/: hello.txt  sh.glsl  sh2.glsl
shaderlab/src/main/cpp/: CMakeLists.txt  glsl.h  shader.cpp  shader.h  shaderlab.cpp
shaderlab/src/main/java/com/xinlan/shaderlab/: NativeBridge.java  ShaderView.java
shaderlab/src/test/java/com/xinlan/shaderlab/: ExampleUnitTest.java
